# moderncpp-code-examples

./: CMakeLists.txt  README.md  contributing.md  moderncpp_code_examples_config.h
cmake_proj_setup/: CMakeLists.txt
cmake_proj_setup/hello_world/: CMakeLists.txt
cmake_proj_setup/hello_world/src/: main.cpp
cpp20_code_examples/: CMakeLists.txt
cpp20_code_examples/bitfields/: CMakeLists.txt
cpp20_code_examples/bitfields/src/: delthis  main.cpp
cpp20_code_examples/lambda/: CMakeLists.txt
cpp20_code_examples/lambda/src/: main.cpp
cpp20_code_examples/latches/: CMakeLists.txt
cpp20_code_examples/latches/src/: main.cpp
