project (bitfields)
 
set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
file(GLOB SRC_FILES_CPP ${PROJECT_SOURCE_DIR}/*.cpp)

set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
include_directories("${PROJECT_BINARY_DIR}")
add_executable(${PROJECT_NAME} ${SRC_FILES_CPP})
include_directories("${PROJECT_INCLUDE_DIR}")